# checkmark

./: CMakeLists.txt  README.md
docs/: Doxyfile.checkmark  links.txt  rfc.txt
example/: CMakeLists.txt  cidr.cpp  email.cpp  ip.cpp  luhn.cpp  million.cpp  port.cpp  shell.cpp  stopwatch.cpp  url.cpp  uuid.cpp
include/cm/: bitcoin.h  cm.h  domain.h  http.h  luhn.h  media.h  net.h  smtp.h  stopwatch.h  url.h  uuid.h  validator.h
src/: lib.cpp
test/data/: bad.email.in  email.invalid.txt  email.valid.txt  good.email.in  ipv6.invalid.txt  ipv6.valid.txt  shell.txt
test/data/media/: all.csv  application.csv  iana.url  text.csv
test/example/: CMakeLists.txt  email.cpp  luhn.cpp  shell.cpp  stopwatch.cpp  uuid.cpp
test/include/cm/: domain.h  url.h  uuid.h
