set(CMAKE_EXPORT_COMPILE_COMMANDS 1)

add_executable(cm-stopwatch    stopwatch.cpp)
add_executable(cm-million      million.cpp)
add_executable(cm-email        email.cpp)
add_executable(cm-ip           ip.cpp)
add_executable(cm-cidr         cidr.cpp)
add_executable(cm-port         port.cpp)
add_executable(cm-uuid         uuid.cpp)
add_executable(cm-luhn         luhn.cpp)
add_executable(cm-url          url.cpp)
add_executable(cm-shell        shell.cpp)
